tests/spec/fail/fs_append_non_string_text.aja
import (
    "fs"
)

print(fs.append("/tmp/aja_append_fail.txt", 1))
